--- a/styles/style1.css
+++ b/styles/style1.css
@@ -5,7 +5,9 @@ body {
   margin-right: auto;
   font-family: calibri;
   background-color: #82a2e2;
-  background-image: url('./kuvat/error.jpg');
+background-image: url("../kuvat/taustakuva1.webp");
+background-repeat: no-repeat, repeat;
+  background-size: cover;
 }
 h1 {
   font-size: 26px;
@@ -19,6 +21,7 @@ h1 {
 
 h2 {
 	font-family: calibri;
+	font-size: 20px;
 }
 
 p {
